fixed js  module connection

--- a/HW1/SocialNetwork/index.html
+++ b/HW1/SocialNetwork/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Social Network</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
     <style>
         .bg-hero-pattern {
             background-image: url('https://img.freepik.com/free-vector/network-mesh-wire-digital-technology-background_1017-27428.jpg?t=st=1720372348~exp=1720375948~hmac=42299192a3188f76d318140e5a6ef2921fa70072e83f143fb8cebb80db9360da&w=1060');
