--- a/HW1/SocialNetwork/index.html
+++ b/HW1/SocialNetwork/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Social Network</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <script src="main.js" type="module"></script>
     <style>
         .bg-hero-pattern {
